# mooncache

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
apps/admin-api/: Cargo.toml
apps/admin-api/src/: main.rs
apps/gateway/: Cargo.toml
apps/gateway/src/: main.rs
apps/master/: Cargo.toml
apps/master/src/: main.rs
apps/store-node/: Cargo.toml
apps/store-node/src/: main.rs
config/: tenants.example.toml  vendors.example.toml
control-panel/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
control-panel/src/: App.tsx  styles.css
control-panel/src/__tests__/: App.test.tsx
control-panel/src/api/: client.test.ts  client.ts  mockData.ts  types.ts
control-panel/src/auth/: rbac.test.ts  rbac.ts
control-panel/src/components/: ConfirmationModal.tsx  Layout.tsx
control-panel/src/pages/: Alerts.tsx  AuditLog.tsx  CacheAnalytics.tsx  CacheOperations.tsx  Nodes.tsx  Overview.tsx  Tenants.tsx  Vendors.tsx  control-pages.test.tsx
control-panel/tests/e2e/: control-panel.spec.ts
crates/admin-api/: Cargo.toml
crates/admin-api/src/: audit.rs  lib.rs  rbac.rs  routes.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  ids.rs  lib.rs  metrics.rs
crates/fingerprint/: Cargo.toml
crates/fingerprint/src/: canonical_json.rs  eligibility.rs  lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: cache_flow.rs  clients.rs  config.rs  lib.rs  routes.rs  singleflight.rs  streaming.rs  vendor.rs
crates/master/: Cargo.toml
crates/master/src/: allocator.rs  eviction.rs  lease.rs  lib.rs  object.rs  quota.rs  state.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: admin.rs  cache_headers.rs  lib.rs  responses.rs
crates/store/: Cargo.toml
crates/store/src/: checksum.rs  chunk.rs  lib.rs  memory.rs  ssd.rs
docs/superpowers/plans/: 2026-07-03-distributed-api-response-kvcache.md
docs/superpowers/specs/: 2026-07-03-distributed-api-response-kvcache-design.md
tests/integration/: admin_api.rs  cache_flow.rs  distributed_cache_flow.rs  e2e_cluster.rs  load_smoke.rs  ssd_cold_tier.rs  streaming_flow.rs  streaming_replay.rs  ttl_lifecycle.rs
tests/integration/common/: mod.rs
