[workspace]
members = [
  "crates/common",
  "crates/protocol",
  "crates/fingerprint",
  "crates/master",
  "crates/store",
  "crates/gateway",
  "crates/admin-api",
  "apps/gateway",
  "apps/master",
  "apps/store-node",
  "apps/admin-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chacha20poly1305 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
async-trait = "0.1"
futures-util = "0.3"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }

toml = "0.8"