[package]
name = "mooncache-admin-api-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mooncache-admin-api = { path = "../../crates/admin-api" }
mooncache-common = { path = "../../crates/common" }
mooncache-gateway = { path = "../../crates/gateway" }
mooncache-master = { path = "../../crates/master" }
axum.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tower.workspace = true
