[package]
name = "mooncache-gateway-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mooncache-gateway = { path = "../../crates/gateway" }
mooncache-master = { path = "../../crates/master" }
mooncache-store = { path = "../../crates/store" }
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tower.workspace = true
tempfile.workspace = true
