[package]
name = "mooncache-master-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
parking_lot = { workspace = true }
mooncache-common = { path = "../../crates/common" }
mooncache-master = { path = "../../crates/master" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
base64.workspace = true

[dev-dependencies]
tower.workspace = true
