[package]
name = "mooncache-store-node-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mooncache-store = { path = "../../crates/store" }
axum.workspace = true
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tower.workspace = true
