[package]
name = "mooncache-store-node-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mooncache-store = { path = "../../crates/store" }
mooncache-common = { path = "../../crates/common" }
axum.workspace = true
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tower.workspace = true
tempfile.workspace = true
reqwest.workspace = true

[[test]]
name = "ssd_cold_tier"
path = "../../tests/integration/ssd_cold_tier.rs"
