[package]
name = "mooncache-admin-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mooncache-common = { path = "../common" }
mooncache-fingerprint = { path = "../fingerprint" }
mooncache-master = { path = "../master" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[[test]]
name = "admin_api"
path = "../../tests/integration/admin_api.rs"
