[package]
name = "mooncache-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mooncache-common = { path = "../common" }
mooncache-master = { path = "../master" }
chacha20poly1305.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
